--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "bugs": {
     "url": "https://github.com/CST-education/webpack-5/issues"
   },
-  "homepage": "https://CST-education.github.io/webpack",
+  "homepage": "https://margarita555.github.io/hw-13-webpack-5",
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
@@ -29,6 +29,8 @@
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.2.0",
+    "postcss": "^8.3.6",
+    "postcss-loader": "^6.1.1",
     "sass": "^1.38.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
@@ -40,6 +42,7 @@
     "debounce": "^1.2.1",
     "gh-pages": "^3.2.3",
     "handlebars": "^4.7.7",
-    "handlebars-loader": "^1.7.1"
+    "handlebars-loader": "^1.7.1",
+    "postcss-preset-env": "^6.7.0"
   }
 }
