--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
+    "@pnotify/core": "^5.2.0",
+    "@pnotify/mobile": "^5.2.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^6.2.0",
@@ -39,6 +41,7 @@
     "webpack-dev-server": "^4.0.0"
   },
   "dependencies": {
+    "basiclightbox": "^5.0.4",
     "debounce": "^1.2.1",
     "gh-pages": "^3.2.3",
     "handlebars": "^4.7.7",
